fix: correct yamllint action input parameters
- Change yamllint_file_or_dir to file_or_dir
- Change yamllint_strict to strict
- Change yamllint_comment to no_warnings (false to enable comments)
- Fixes action parameter validation errors

--- a/.github/workflows/ha-config-check.yaml
+++ b/.github/workflows/ha-config-check.yaml
@@ -26,9 +26,9 @@ jobs:
         uses: ibiqlik/action-yamllint@v3
         with:
           config_file: .yamllint.yaml
-          yamllint_file_or_dir: gitops/apps/home-assistant/
-          yamllint_strict: true
-          yamllint_comment: true
+          file_or_dir: gitops/apps/home-assistant/
+          strict: true
+          no_warnings: false
 
   ha-config-check:
     name: Home Assistant Configuration Check
