--- a/.github/workflows/ha-config-check.yaml
+++ b/.github/workflows/ha-config-check.yaml
@@ -22,13 +22,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install yamllint
+        run: |
+          pip install yamllint
+
       - name: Run yamllint
-        uses: ibiqlik/action-yamllint@v3
-        with:
-          config_file: .yamllint.yaml
-          file_or_dir: gitops/apps/home-assistant/
-          strict: true
-          no_warnings: false
+        run: |
+          yamllint -c .yamllint.yaml gitops/apps/home-assistant/
 
   ha-config-check:
     name: Home Assistant Configuration Check
