--- a/.github/workflows/ha-generate-configmaps.yaml
+++ b/.github/workflows/ha-generate-configmaps.yaml
@@ -22,13 +22,15 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
 
-      - name: Install jinja2-cli (for helpers generation)
+      - name: Install dependencies
         run: |
+          pip install --upgrade pip
           pip install jinja2-cli
 
       - name: Generate all ConfigMaps
         run: |
           cd gitops/apps/home-assistant/configuration
+          chmod +x ./generate-configmaps.sh
           ./generate-configmaps.sh
 
       - name: Check for changes
