fix: replace min-spaces-after with max-spaces-after for colons rule
- yamllint colons rule doesn't support min-spaces-after option
- Use max-spaces-after instead to allow up to 1 space after colons
- Fixes 'unknown option min-spaces-after' error

--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -46,7 +46,7 @@ rules:
   # Allow colons in flow style
   colons:
     max-spaces-before: 0
-    min-spaces-after: 1
+    max-spaces-after: 1
   
   # Allow dashes in flow style
   dashes:
