fix: replace min-spaces-after with max-spaces-after for commas rule
- yamllint commas rule also doesn't support min-spaces-after option
- Use max-spaces-after instead to allow up to 1 space after commas
- Ensures consistency with colons rule fix

--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -41,7 +41,7 @@ rules:
   # Allow commas at end of lines
   commas:
     max-spaces-before: 0
-    min-spaces-after: 1
+    max-spaces-after: 1
   
   # Allow colons in flow style
   colons:
