--- a/gitops/apps/home-assistant/configuration/automations/alex_cleanup_old_photos.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/alex_cleanup_old_photos.yaml
@@ -1,9 +1,9 @@
-alias: Alex - Cleanup Old Photos (30+ days)
-mode: single
+alias: "Alex - Cleanup Old Photos (30+ days)"
+mode: "single"
 triggers:
-  - platform: time
+  - platform: "time"
     at: "02:00:00"
 conditions: []
 actions:
-  - service: shell_command.cleanup_old_photos
+  - service: "shell_command.cleanup_old_photos"
     data: {}
