--- a/gitops/apps/home-assistant/configuration/blueprints/automation/room_switch_control.yaml
+++ b/gitops/apps/home-assistant/configuration/blueprints/automation/room_switch_control.yaml
@@ -1,34 +1,34 @@
 blueprint:
-  name: Room - Switch Control (Hue Dimmer, scheduled scenes)
+  name: "Room - Switch Control (Hue Dimmer, scheduled scenes)"
   description: >
     Map Hue 4-button dimmer actions to room lighting. Defaults use scheduled_light_on
     for ON/toggle and provide brightness adjustments, scene cycling, and all-off.
     Optional input_select helpers (one per press type) can override actions via dashboard.
     Also supports legacy hue_event triggers via optional hue_event_id.
-  domain: automation
+  domain: "automation"
 
   input:
     room_key:
-      name: Room Key
+      name: "Room Key"
       description: "Short name used by scenes: scene.<room_key>_(morning|day|evening|night)"
       selector:
         text: {}
 
     target_lights:
-      name: Target lights (group or list)
+      name: "Target lights (group or list)"
       selector:
         target:
           entity:
-            domain: light
+            domain: "light"
 
     dimmer:
-      name: Hue Dimmer device
+      name: "Hue Dimmer device"
       selector:
         device:
-          integration: hue
+          integration: "hue"
 
     hue_event_id:
-      name: (Optional) Hue event ID (for hue_event compatibility)
+      name: "(Optional) Hue event ID (for hue_event compatibility)"
       description: "Example: living_room_switch_button"
       default:
       selector:
@@ -36,131 +36,131 @@ blueprint:
 
     # ---- Optional schedule passthrough for scheduled_light_on
     custom_schedule_enabled:
-      name: (Optional) Custom schedule enabled boolean
+      name: "(Optional) Custom schedule enabled boolean"
       default:
       selector:
         entity:
-          domain: input_boolean
+          domain: "input_boolean"
     custom_s1_start:
-      name: (Optional) Morning start (time-only)
+      name: "(Optional) Morning start (time-only)"
       default:
       selector:
         entity:
-          domain: input_datetime
+          domain: "input_datetime"
     custom_s2_start:
-      name: (Optional) Day start (time-only)
+      name: "(Optional) Day start (time-only)"
       default:
       selector:
         entity:
-          domain: input_datetime
+          domain: "input_datetime"
     custom_s3_start:
-      name: (Optional) Evening start (time-only)
+      name: "(Optional) Evening start (time-only)"
       default:
       selector:
         entity:
-          domain: input_datetime
+          domain: "input_datetime"
     custom_s4_start:
-      name: (Optional) Night start (time-only)
+      name: "(Optional) Night start (time-only)"
       default:
       selector:
         entity:
-          domain: input_datetime
+          domain: "input_datetime"
 
     # ---- Optional scene cycle memory helper
     scene_cycle_helper:
-      name: (Optional) Scene cycle helper (input_select)
+      name: "(Optional) Scene cycle helper (input_select)"
       description: "Stores the CURRENT slot; cycles morning→day→evening→night. Defaults to input_select.<room_key>_scene_cycle"
       default: ""
       selector:
         entity:
-          domain: input_select
+          domain: "input_select"
 
     # ---- Optional brightness helpers
     brightness_step_helper:
-      name: (Optional) Brightness step helper (input_number, %)
+      name: "(Optional) Brightness step helper (input_number, %)"
       description: "e.g. input_number.<room>_brightness_step_pct"
       default:
       selector:
         entity:
-          domain: input_number
+          domain: "input_number"
     min_brightness_helper:
-      name: (Optional) Min brightness helper (input_number, %)
+      name: "(Optional) Min brightness helper (input_number, %)"
       description: "e.g. input_number.<room>_min_brightness_pct"
       default:
       selector:
         entity:
-          domain: input_number
+          domain: "input_number"
     max_brightness_helper:
-      name: (Optional) Max brightness helper (input_number, %)
+      name: "(Optional) Max brightness helper (input_number, %)"
       description: "e.g. input_number.<room>_max_brightness_pct"
       default:
       selector:
         entity:
-          domain: input_number
+          domain: "input_number"
 
     # ---- Static brightness fallback values
     brightness_step_pct:
-      name: Fallback brightness step (%)
+      name: "Fallback brightness step (%)"
       default: 10
       selector:
         number:
           min: 1
           max: 50
           unit_of_measurement: "%"
-          mode: slider
+          mode: "slider"
 
     # ---- Optional per-button override helpers
     btn1_short_action_helper:
-      name: (Optional) Button 1 Short action (input_select)
+      name: "(Optional) Button 1 Short action (input_select)"
       default:
       selector:
         entity:
-          domain: input_select
+          domain: "input_select"
     btn1_long_action_helper:
-      name: (Optional) Button 1 Long action (input_select)
+      name: "(Optional) Button 1 Long action (input_select)"
       default:
       selector:
         entity:
-          domain: input_select
+          domain: "input_select"
     btn2_short_action_helper:
-      name: (Optional) Button 2 Short action (input_select)
+      name: "(Optional) Button 2 Short action (input_select)"
       default:
       selector:
         entity:
-          domain: input_select
+          domain: "input_select"
     btn2_long_action_helper:
-      name: (Optional) Button 2 Long action (input_select)
+      name: "(Optional) Button 2 Long action (input_select)"
       default:
       selector:
         entity:
-          domain: input_select
+          domain: "input_select"
     btn3_short_action_helper:
-      name: (Optional) Button 3 Short action (input_select)
+      name: "(Optional) Button 3 Short action (input_select)"
       default:
       selector:
         entity:
-          domain: input_select
+          domain: "input_select"
     btn3_long_action_helper:
-      name: (Optional) Button 3 Long action (input_select)
+      name: "(Optional) Button 3 Long action (input_select)"
       default:
       selector:
         entity:
-          domain: input_select
+          domain: "input_select"
     btn4_short_action_helper:
-      name: (Optional) Button 4 Short action (input_select)
+      name: "(Optional) Button 4 Short action (input_select)"
       default:
       selector:
         entity:
-          domain: input_select
+          domain: "input_select"
     btn4_long_action_helper:
-      name: (Optional) Button 4 Long action (input_select)
+      name: "(Optional) Button 4 Long action (input_select)"
       default:
       selector:
         entity:
-          domain: input_select
+          domain: "input_select"
 
-mode: restart
-max_exceeded: silent
+mode: "restart"
+max_exceeded: "silent"
 
 variables:
   # Materialize all optional inputs so they're available in templates
@@ -281,69 +281,69 @@ variables:
 
 trigger:
   # Event-based triggers (Philips Hue v2 "hue_event")
-  - platform: event
-    event_type: hue_event
+  - platform: "event"
+    event_type: "hue_event"
     event_data:
       id: !input hue_event_id
-      type: initial_press
+      type: "initial_press"
       subtype: 1
     id: e1_short
-  - platform: event
-    event_type: hue_event
+  - platform: "event"
+    event_type: "hue_event"
     event_data:
       id: !input hue_event_id
-      type: long_press
+      type: "long_press"
       subtype: 1
     id: e1_long
 
-  - platform: event
-    event_type: hue_event
+  - platform: "event"
+    event_type: "hue_event"
     event_data:
       id: !input hue_event_id
-      type: initial_press
+      type: "initial_press"
       subtype: 2
     id: e2_short
-  - platform: event
-    event_type: hue_event
+  - platform: "event"
+    event_type: "hue_event"
     event_data:
       id: !input hue_event_id
-      type: long_press
+      type: "long_press"
       subtype: 2
     id: e2_long
 
-  - platform: event
-    event_type: hue_event
+  - platform: "event"
+    event_type: "hue_event"
     event_data:
       id: !input hue_event_id
-      type: initial_press
+      type: "initial_press"
       subtype: 3
     id: e3_short
-  - platform: event
-    event_type: hue_event
+  - platform: "event"
+    event_type: "hue_event"
     event_data:
       id: !input hue_event_id
-      type: long_press
+      type: "long_press"
       subtype: 3
     id: e3_long
 
-  - platform: event
-    event_type: hue_event
+  - platform: "event"
+    event_type: "hue_event"
     event_data:
       id: !input hue_event_id
-      type: short_release
+      type: "short_release"
       subtype: 4
     id: e4_short
-  - platform: event
-    event_type: hue_event
+  - platform: "event"
+    event_type: "hue_event"
     event_data:
       id: !input hue_event_id
-      type: long_press
+      type: "long_press"
       subtype: 4
     id: e4_long
 
 action:
   # First: debug log so we SEE if the trigger actually fired
-  - service: logbook.log
+  - service: "logbook.log"
     data:
       name: "room_switch_control"
       message: >-
@@ -364,7 +364,7 @@ action:
         {% elif id == 'e4_long' %}{{ btn4_long_action }}
         {% else %}unknown{% endif %}
 
-  - service: logbook.log
+  - service: "logbook.log"
     data:
       name: "room_switch_control"
       message: >-
@@ -374,7 +374,7 @@ action:
       # --- toggle -> call room_toggle with only the supported args
       - conditions: "{{ action_key == 'toggle' }}"
         sequence:
-          - service: script.room_toggle
+          - service: "script.room_toggle"
             data:
               room_key: "{{ room_key_input }}"
               target_lights: "{{ target_lights_input.entity_id if target_lights_input.entity_id is defined else target_lights_input }}"
@@ -387,7 +387,7 @@ action:
       # --- scheduled_on/default_scene -> directly call scheduled_light_on with schedule overrides
       - conditions: "{{ action_key == 'scheduled_on' or action_key == 'default_scene' }}"
         sequence:
-          - service: script.scheduled_light_on
+          - service: "script.scheduled_light_on"
             data:
               room_key: "{{ room_key_input }}"
               custom_schedule_enabled: "{{ custom_schedule_enabled_input }}"
@@ -399,33 +399,33 @@ action:
 
       - conditions: "{{ action_key == 'all_off' }}"
         sequence:
-          - service: light.turn_off
+          - service: "light.turn_off"
             target: !input target_lights
 
       - conditions: "{{ action_key == 'brightness_up' }}"
         sequence:
-          - service: light.turn_on
+          - service: "light.turn_on"
             target: !input target_lights
             data:
               brightness_step_pct: "{{ brightness_step_pct_resolved | int }}"
 
       - conditions: "{{ action_key == 'brightness_down' }}"
         sequence:
-          - service: light.turn_on
+          - service: "light.turn_on"
             target: !input target_lights
             data:
               brightness_step_pct: "{{ 0 - (brightness_step_pct_resolved | int) }}"
 
       - conditions: "{{ action_key == 'brightness_min' }}"
         sequence:
-          - service: light.turn_on
+          - service: "light.turn_on"
             target: !input target_lights
             data:
               brightness_pct: "{{ min_brightness_pct_resolved | int }}"
 
       - conditions: "{{ action_key == 'brightness_max' }}"
         sequence:
-          - service: light.turn_on
+          - service: "light.turn_on"
             target: !input target_lights
             data:
               brightness_pct: "{{ max_brightness_pct_resolved | int }}"
@@ -443,7 +443,7 @@ action:
               idx: "{{ order.index(cur_slot) if cur_slot in order else 0 }}"
               next_slot: "{{ order[(idx + 1) % order | length] }}"
               scene_to_activate: "scene.{{ room_key_input }}_{{ next_slot }}"
-          - service: logbook.log
+          - service: "logbook.log"
             data:
               name: "scene_cycle DEBUG"
               message: >-
@@ -453,18 +453,18 @@ action:
               - condition: template
                 value_template: "{{ scene_cycle_helper is not none and scene_cycle_helper != '' }}"
             then:
-              - service: input_select.select_option
+              - service: "input_select.select_option"
                 target:
                   entity_id: "{{ scene_cycle_helper }}"
                 data:
                   option: "{{ next_slot }}"
-          - service: scene.turn_on
+          - service: "scene.turn_on"
             target:
               entity_id: "{{ scene_to_activate }}"
 
       - conditions: "{{ action_key == 'turn_off_home' }}"
         sequence:
-          - service: light.turn_off
+          - service: "light.turn_off"
             target:
               entity_id: light.home
 
