--- a/gitops/apps/home-assistant/configuration/automations/alex_camera_privacy_home.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/alex_camera_privacy_home.yaml
@@ -1,17 +1,17 @@
-alias: Alex - Camera Privacy (Home)
-mode: restart
+alias: "Alex - Camera Privacy (Home)"
+mode: "restart"
 triggers:
-  - trigger: zone
+  - trigger: "zone"
     entity_id: person.alex_merenda
     zone: zone.home
-    event: enter
+    event: "enter"
 actions:
-  - action: light.turn_off
+  - action: "light.turn_off"
     target:
       entity_id:
         - light.bedroom_status_led
         - light.living_room_status_led
-  - action: switch.turn_on
+  - action: "switch.turn_on"
     target:
       entity_id:
         - switch.bedroom_privacy_mode
