--- a/gitops/apps/home-assistant/configuration/automations/alex_reolink_human_detect_alert.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/alex_reolink_human_detect_alert.yaml
@@ -1,16 +1,16 @@
-alias: Alex - Reolink Human Alert (Away)
-mode: queued
+alias: "Alex - Reolink Human Alert (Away)"
+mode: "queued"
 triggers:
-  - trigger: state
+  - trigger: "state"
     entity_id:
       - binary_sensor.living_room_person
       - binary_sensor.bedroom_person
     from: "off"
     to: "on"
 conditions:
-  - condition: not
+  - condition: "not"
     conditions:
-      - condition: state
+      - condition: "state"
         entity_id: person.alex_merenda
         state: "home"
 variables:
@@ -30,16 +30,16 @@ variables:
   path: "/config/www/intruders/{{ slug }}_{{ timestamp }}.jpg"
   url: "/local/intruders/{{ slug }}_{{ timestamp }}.jpg"
 actions:
-  - action: camera.snapshot
+  - action: "camera.snapshot"
     target: { entity_id: "{{ cam }}" }
     data:
       filename: "{{ path }}"
-  - action: notify.mobile_app_pixel_9_pro_xl
+  - action: "notify.mobile_app_pixel_9_pro_xl"
     data:
       title: "Human detected - {{ room }}"
       message: "{{ now().strftime('%-I:%M %p on %b %-d') }}"
       data:
         image: "{{ url }}"
         tag: "human-{{ slug }}"
-        importance: high
+        importance: "high"
         sticky: true
