--- a/gitops/apps/home-assistant/configuration/automations/alex_reolink_human_detect_alert.yaml
+++ b/gitops/apps/home-assistant/configuration/automations/alex_reolink_human_detect_alert.yaml
@@ -3,15 +3,15 @@ mode: "queued"
 triggers:
   - trigger: "state"
     entity_id:
-      - binary_sensor.living_room_person
-      - binary_sensor.bedroom_person
+      - "binary_sensor.living_room_person"
+      - "binary_sensor.bedroom_person"
     from: "off"
     to: "on"
 conditions:
   - condition: "not"
     conditions:
       - condition: "state"
-        entity_id: person.alex_merenda
+        entity_id: "person.alex_merenda"
         state: "home"
 variables:
   CAM_MAP: >
